# CMakeList.txt: proyecto de CMake para Partial_persistence, incluya el origen y defina
# la lógica específica del proyecto aquí.
#
cmake_minimum_required (VERSION 3.8)

# Agregue un origen al ejecutable de este proyecto.
add_executable (Partial_persistence "Partial_persistence.cpp" "Partial_persistence.h")

# TODO: Agregue pruebas y destinos de instalación si es necesario.
